ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pulpocon-ingress
  labels:
    app: pulpocon
spec:
  rules:
  - host: myapp.fbi.com
    http:
      paths:
      - backend:
          service:
            name: pulpocon-app
            port:
              number: 8080
        path: /
        pathType: Prefix
